--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       try {
         const amount = Math.floor(Math.random() * 100000) + 1;
         
-        const response = await fetch(`https://throbbing-rain-bdd7.alicexbt.workers.dev/?url=exclusion-sampling-bunch-trailer.trycloudflare.com/send?amount=${amount}&offline=false`, {
+        const response = await fetch(`https://throbbing-rain-bdd7.alicexbt.workers.dev/?url=https://wrap-gear-golf-article.trycloudflare.com/send?amount=${amount}&offline=false`, {
           method: 'POST',
           headers: {
             'accept': 'application/json'
