replace logo with dino gif

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="container">
     <div id="content-wrapper">
-      <img id="logo" src="https://cashu.space/img/rounded_192x192.png" alt="Logo">
+      <img id="logo" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExencwdWZvcGRraXByMTNrbjAzdjUwam95ODJxOWhqY3lyOWJnYXJhYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2xyx8KRogVl7iM6wHs/giphy.webp" alt="Logo">
 
       <textarea id="token" readonly style="display: none;"></textarea>
     </div>
